--- a/styles.css
+++ b/styles.css
@@ -115,7 +115,7 @@ hr {
     position: fixed;
     top: 0;
     right: 0;
-    background-color: #333;
+    background-color: #0056b3;
     overflow-x: hidden;
     transition: 0.5s;
     padding-top: 60px;
@@ -131,7 +131,7 @@ hr {
 }
 
 .nav-panel a:hover {
-    background-color: #0056b3;
+    background-color: #003f7f;
 }
 
 .nav-panel .closebtn {
@@ -143,14 +143,12 @@ hr {
 }
 /* Hero Section */
 .hero-section {
-    background: #f0f0f0;
-    color: #333;
-    text-align: center;
-    padding: 60px 20px;
     background-image: url('Images/businesspersons-with-document.jpg');
     background-size: cover;
     background-position: center;
-    position: relative;
+    padding: 60px 20px;
+    color: #333;
+    text-align: center;
 }
 
 .hero-content {
@@ -160,20 +158,14 @@ hr {
     justify-content: space-between;
     align-items: center;
     height: 450px;
-    position: relative;
 }
 
 .hero-left {
     background-color: rgba(255, 255, 255, 0.9);
-    margin: 0 auto;
     padding: 40px;
     border-radius: 10px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     text-align: left;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    z-index: 2;
 }
 
 .hero-left h2 {
