--- a/styles.css
+++ b/styles.css
@@ -549,17 +549,16 @@ hr {
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     overflow: hidden; 
     position: relative;
-    height: 500px; 
     transition: transform 0.3s ease; 
 }
 
 .blog-post img {
     width: 100%;
-    height: 100%;
+    height: 90%;
     object-fit: cover; 
     transition: transform 0.3s ease; 
     position: absolute; 
-    top: 15%;
+    top: 25%;
     left: 0;
     z-index: 1; 
 }
@@ -574,7 +573,7 @@ hr {
 }
 
 .blog-post:hover img {
-    transform: translateY(-100%); 
+    transform: translateY(-120%); 
     z-index: 0; 
 }
 
@@ -724,32 +723,30 @@ hr {
     }
 }
 
-/* Modal Container */
+/* Modal */
 .modal {
-    display: none; /* Hidden by default */
-    position: fixed; /* Stay in place */
-    z-index: 999; /* Sit on top */
+    display: none; 
+    position: fixed; 
+    z-index: 999; 
     left: 0;
     top: 0;
-    width: 100%; /* Full width */
-    height: 100%; /* Full height */
-    overflow: auto; /* Enable scroll if needed */
-    background-color: rgba(0, 0, 0, 0.7); /* Black background with opacity */
+    width: 100%; 
+    height: 100%; 
+    overflow: auto; 
+    background-color: rgba(0, 0, 0, 0.7); 
 }
 
-/* Modal Content */
 .modal-content {
     background-color: white;
-    margin: 15% auto; /* 15% from the top and centered */
+    margin: 15% auto; 
     padding: 20px;
     border-radius: 10px;
     width: 90%;
-    max-width: 600px; /* Responsive max width */
+    max-width: 600px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
     position: relative;
 }
 
-/* Modal Close Button */
 .close {
     position: absolute;
     top: 10px;
@@ -760,13 +757,10 @@ hr {
     cursor: pointer;
 }
 
-.close:hover, .close:focus {
+.close:hover {
     color: black;
-    text-decoration: none;
-    cursor: pointer;
 }
 
-/* Modal Image */
 .modal-img {
     width: 100%;
     height: auto;
@@ -774,14 +768,12 @@ hr {
     border-radius: 8px;
 }
 
-/* Modal Title */
 .modal-title {
     font-size: 1.5rem;
     color: #333;
     margin-bottom: 15px;
 }
 
-/* Modal Text */
 .modal-text {
     font-size: 1rem;
     color: #666;
