--- a/styles.css
+++ b/styles.css
@@ -143,7 +143,7 @@ hr {
 }
 /* Hero Section */
 .hero-section {
-    background-image: url('Images/businesspersons-with-document-min.jpg');
+    background-image: url('Assets/herobg.jpg');
     background-size: cover;
     background-position: center;
     padding: 60px 20px;
